Fix z-index thrashing with native shorten posts (#537)
* Remove z-index from cleanfeed :after

* Remove z-index from disable gifs elements

* Enforce DOM order for disable gifs elements

--- a/src/scripts/accesskit.css
+++ b/src/scripts/accesskit.css
@@ -2,7 +2,6 @@
   position: absolute;
   top: 1ch;
   right: 1ch;
-  z-index: 1;
 
   height: 1em;
   padding: 5px;
@@ -20,7 +19,6 @@
 
 .xkit-paused-gif {
   position: absolute;
-  z-index: 1;
 }
 
 figure:hover .xkit-paused-gif,
